# Hydra-ROS

./: .gitignore  .pre-commit-config.yaml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yaml
doc/: hydra_ros_interfaces.md  ros2_setup.md  setting_up_a_new_sensor.md
doc/examples/: example_camera.launch.yaml  example_config.yaml
docker/: Makefile  README.md
docker/dev/: Dockerfile  docker-compose.yml
docker/minimal/: Dockerfile  docker-compose.yml
docker/zed/: Dockerfile  docker-compose.yml
hydra_msgs/: CMakeLists.txt  package.xml
hydra_msgs/msg/: ActiveLayer.msg  DsgUpdate.msg
hydra_ros/: CMakeLists.txt  package.xml
hydra_ros/app/: csv_to_tf  dsg_republisher  hydra_node.cpp  noisy_tf_publisher  odom_to_tf
hydra_ros/config/: hydra_ros_visualizer_plugins.yaml  noisy_tf_publisher_node.yaml
hydra_ros/config/datasets/: a1.yaml  oakd.yaml  realsense_d455.yaml  uhumans2.yaml  zed2i.yaml
hydra_ros/config/pipelines/: default.yaml
hydra_ros/config/sinks/: gvd_places_sinks.yaml
hydra_ros/hydra_ros/: __init__.py
hydra_ros/include/hydra_ros/: common.h  hydra_ros_pipeline.h
hydra_ros/include/hydra_ros/active_window/: reconstruction_visualizer.h  tsdf_occupancy_publisher.h
hydra_ros/include/hydra_ros/backend/: ros_backend_publisher.h
hydra_ros/include/hydra_ros/frontend/: gvd_occupancy_publisher.h  gvd_visualization_utilities.h  object_visualizer.h  places_visualizer.h  ros_frontend_publisher.h
hydra_ros/include/hydra_ros/input/: feature_receiver.h  image_receiver.h  pointcloud_adaptor.h  pointcloud_receiver.h  ros_data_receiver.h  ros_input_module.h  ros_sensors.h
hydra_ros/include/hydra_ros/odometry/: ros_pose_graph_tracker.h
hydra_ros/include/hydra_ros/utils/: bow_subscriber.h  dsg_streaming_interface.h  external_loop_closure_subscriber.h  input_data_to_messages.h  occupancy_publisher.h  scene_graph_logger.h  status_monitor.h  tf_lookup.h
hydra_ros/include/hydra_ros/visualizer/: feature_color_adaptors.h  voxel_drawing.h
hydra_ros/launch/: hydra.launch.yaml  noisy_tf_publisher_node.launch.yaml  pipeline_config.launch  scene_graph_logger.launch.yaml
hydra_ros/launch/datasets/: a1.launch.yaml  kimera_multi.launch  oakd.launch  realsense.launch.yaml  uhumans2.launch  uhumans2.launch.yaml  zed2i.launch.yaml
hydra_ros/launch/utils/: noisy_odometry.launch  noisy_tf_publisher_node.launch
hydra_ros/scripts/: noisy_tf_publisher.py
hydra_ros/src/: common.cpp  hydra_ros_pipeline.cpp
hydra_ros/src/active_window/: reconstruction_visualizer.cpp  tsdf_occupancy_publisher.cpp
hydra_ros/src/backend/: ros_backend_publisher.cpp
hydra_ros/src/frontend/: gvd_occupancy_publisher.cpp  gvd_visualization_utilities.cpp  object_visualizer.cpp  places_visualizer.cpp  ros_frontend_publisher.cpp
hydra_ros/src/input/: feature_receiver.cpp  image_receiver.cpp  pointcloud_adaptor.cpp  pointcloud_receiver.cpp  ros_data_receiver.cpp  ros_sensors.cpp
hydra_ros/src/loop_closure/: ros_lcd_registration.cpp
hydra_ros/src/odometry/: ros_pose_graph_tracker.cpp
hydra_ros/src/openset/: ros_embedding_group.cpp
hydra_ros/src/utils/: bow_subscriber.cpp  dsg_streaming_interface.cpp  external_loop_closure_subscriber.cpp  input_data_to_messages.cpp  scene_graph_logger.cpp  status_monitor.cpp  tf_lookup.cpp
hydra_ros/src/visualizer/: feature_color_adaptors.cpp
hydra_ros/tests/: main.cpp  test_ros_sensors.cpp
hydra_visualizer/: CMakeLists.txt  package.xml
hydra_visualizer/app/: hydra_visualizer_node.cpp
hydra_visualizer/cfg/: LayerVisualizer.cfg
hydra_visualizer/config/: external_plugins.yaml  visualizer_config.yaml  visualizer_plugins.yaml
hydra_visualizer/include/hydra_visualizer/: drawing.h  layer_info.h  scene_graph_renderer.h  visualizer_node.h
hydra_visualizer/include/hydra_visualizer/adapters/: graph_color.h  mesh_color.h  text.h
hydra_visualizer/include/hydra_visualizer/color/: colormap_utilities.h  graph_color_adaptors.h
hydra_visualizer/include/hydra_visualizer/groundtruth/: bounding_box_publisher.h  region_publisher.h
hydra_visualizer/include/hydra_visualizer/io/: graph_file_wrapper.h  graph_ros_wrapper.h  graph_wrapper.h  graph_zmq_wrapper.h
hydra_visualizer/include/hydra_visualizer/plugins/: basis_point_plugin.h  footprint_plugin.h  khronos_object_plugin.h  mesh_plugin.h  places_freespace_plugin.h  pose_plugin.h  visualizer_plugin.h
hydra_visualizer/include/hydra_visualizer/utils/: config_manager.h  config_wrapper.h  marker_group_pub.h  marker_tracker.h  polygon_utilities.h  text_adaptors.h  visualizer_types.h  visualizer_utilities.h
hydra_visualizer/launch/: static_visualizer.launch.yaml  streaming_visualizer.launch.yaml
hydra_visualizer/rviz/: a1.rviz  realsense_d455.rviz  static_visualizer.rviz  streaming_visualizer.rviz  zed.rviz
hydra_visualizer/src/: drawing.cpp  layer_info.cpp  scene_graph_renderer.cpp  visualizer_node.cpp
hydra_visualizer/src/adapters/: graph_color.cpp  mesh_color.cpp  text.cpp
hydra_visualizer/src/color/: colormap_utilities.cpp  graph_color_adaptors.cpp  mesh_color_adaptor.cpp
hydra_visualizer/src/groundtruth/: bounding_box_publisher.cpp  region_publisher.cpp
hydra_visualizer/src/io/: graph_file_wrapper.cpp  graph_ros_wrapper.cpp  graph_zmq_wrapper.cpp
hydra_visualizer/src/plugins/: basis_point_plugin.cpp  footprint_plugin.cpp  khronos_object_plugin.cpp  mesh_plugin.cpp  places_freespace_plugin.cpp  pose_plugin.cpp
hydra_visualizer/src/utils/: config_manager.cpp  marker_group_pub.cpp  marker_tracker.cpp  polygon_utilities.cpp  text_adaptors.cpp  visualizer_types.cpp  visualizer_utilities.cpp
hydra_visualizer/tests/: test_ear_clipping.cpp
install/: packages.yaml  ros2.yaml  ros2_docker.yaml
